--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Medicamentos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.7.6/css/uikit.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.7.6/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.7.6/js/uikit-icons.min.js"></script>
     <style>
         /* Estilos generales */
         body {
@@ -11,10 +14,10 @@
             background-color: #f3f3f3;
             margin: 0;
             padding: 0;
+            text-align: center; /* Para centrar el botón */
         }
 
         h1 {
-            text-align: center;
             background-color: #3498db;
             color: #fff;
             padding: 10px;
@@ -22,7 +25,7 @@
         }
 
         .container {
-            max-width: 600px;
+            max-width: 800px;
             margin: 20px auto;
             padding: 10px;
             background-color: #fff;
@@ -53,33 +56,10 @@
             margin-top: 20px;
         }
 
-        /* Estilos para el botón dropdown */
-        .dropdown {
-            text-align: center;
-        }
-
-        .dropbtn {
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
+        /* Estilos para el ícono de papelera */
+        .delete-icon {
+            color: #e74c3c;
             cursor: pointer;
-        }
-
-        .dropdown-content {
-            display: none;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
         }
 
         /* Estilos para dispositivos móviles y tabletas */
@@ -93,21 +73,24 @@
 <body>
     <h1>Registro de Medicamentos</h1>
     <br>
-    <!-- Botón Dropdown para ingresar medicamentos -->
-    <div class="dropdown">
-        <button class="dropbtn">Ingresar Medicamento</button>
-        <div class="dropdown-content">
-            <form id="formularioMedicamento">
-                <label for="nombreMedicamento">Nombre del Medicamento:</label>
-                <input type="text" id="nombreMedicamento" required>
-                <br>
-                <label for="cantidadMedicamento">Cantidad a Tomar:</label>
-                <input type="number" id="cantidadMedicamento" required>
-                <br>
-                <label for="horaMedicamento">Hora de Toma:</label>
-                <input type="time" id="horaMedicamento" required>
-                <br>
-                <button type="submit">Agregar Medicamento</button>
+    <!-- Botón Dropdown para ingresar medicamentos (con UIkit) -->
+    <div class="uk-inline">
+        <button class="uk-button uk-button-primary uk-border-rounded" type="button" onclick="toggleForm()">Ingresar Medicamento</button>
+        <div id="formularioMedicamento" class="uk-dropdown">
+            <form>
+                <div class="uk-margin">
+                    <label class="uk-form-label" for="nombreMedicamento">Nombre del Medicamento:</label>
+                    <input class="uk-input" type="text" id="nombreMedicamento" required>
+                </div>
+                <div class="uk-margin">
+                    <label class="uk-form-label" for="cantidadMedicamento">Cantidad a Tomar:</label>
+                    <input class="uk-input" type="number" id="cantidadMedicamento" required>
+                </div>
+                <div class="uk-margin">
+                    <label class="uk-form-label" for="horaMedicamento">Hora de Toma:</label>
+                    <input class="uk-input" type="time" id="horaMedicamento" required>
+                </div>
+                <button class="uk-button uk-button-primary uk-border-rounded" type="button" onclick="agregarMedicamento()">Agregar Medicamento</button>
             </form>
         </div>
     </div>
@@ -121,6 +104,7 @@
                     <th>Cantidad</th>
                     <th>Hora</th>
                     <th>Tomado</th>
+                    <th>Eliminar Medicamento</th> <!-- Nueva columna -->
                 </tr>
             </thead>
             <tbody>
@@ -128,10 +112,6 @@
             </tbody>
         </table>
     </div>
-
-    <footer>
-        <p id="mensajeFooter"></p>
-    </footer>
 
     <script>
         // Función para mostrar u ocultar el formulario al hacer clic en el botón dropdown
@@ -144,87 +124,63 @@
             }
         }
 
-        document.querySelector(".dropbtn").addEventListener("click", toggleForm);
+        // Función para agregar un medicamento a la tabla
+        function agregarMedicamento() {
+            const nombreMedicamento = document.getElementById("nombreMedicamento").value;
+            const cantidadMedicamento = document.getElementById("cantidadMedicamento").value;
+            const horaMedicamento = document.getElementById("horaMedicamento").value;
 
-        // Cargar medicamentos guardados en localStorage al cargar la página
-        document.addEventListener("DOMContentLoaded", function () {
-            const medicamentos = JSON.parse(localStorage.getItem("medicamentos")) || [];
-            const formularioMedicamento = document.getElementById("formularioMedicamento");
-            const tablaMedicamentos = document.getElementById("medicamentos").getElementsByTagName('tbody')[0];
-            const mensajeFooter = document.getElementById("mensajeFooter");
-
-            // Función para crear una fila de medicamento
-            function crearFilaMedicamento(medicamento) {
+            if (nombreMedicamento && cantidadMedicamento && horaMedicamento) {
+                const tabla = document.getElementById("medicamentos").getElementsByTagName('tbody')[0];
                 const fila = document.createElement("tr");
 
                 const nombreCel = document.createElement("td");
-                nombreCel.textContent = medicamento.nombre;
+                nombreCel.textContent = nombreMedicamento;
 
                 const cantidadCel = document.createElement("td");
-                cantidadCel.textContent = medicamento.cantidad;
+                cantidadCel.textContent = cantidadMedicamento;
 
                 const horaCel = document.createElement("td");
-                horaCel.textContent = medicamento.hora;
+                horaCel.textContent = horaMedicamento;
 
                 const tomadoCel = document.createElement("td");
                 const checkbox = document.createElement("input");
                 checkbox.type = "checkbox";
-                checkbox.addEventListener("click", function () {
-                    // Agrega aquí la lógica para marcar/desmarcar el medicamento
-                });
                 tomadoCel.appendChild(checkbox);
+
+                const eliminarCel = document.createElement("td");
+                const deleteIcon = document.createElement("span");
+                deleteIcon.classList.add("delete-icon");
+                deleteIcon.textContent = "🗑️";
+                deleteIcon.addEventListener("click", function () {
+                    eliminarFila(fila);
+                });
+                eliminarCel.appendChild(deleteIcon);
 
                 fila.appendChild(nombreCel);
                 fila.appendChild(cantidadCel);
                 fila.appendChild(horaCel);
                 fila.appendChild(tomadoCel);
+                fila.appendChild(eliminarCel);
 
-                return fila;
+                tabla.appendChild(fila);
+
+                // Limpiar los campos del formulario
+                document.getElementById("nombreMedicamento").value = "";
+                document.getElementById("cantidadMedicamento").value = "";
+                document.getElementById("horaMedicamento").value = "";
+
+                // Ocultar el formulario después de agregar el medicamento
+                document.getElementById("formularioMedicamento").style.display = "none";
             }
+        }
 
-            // Cargar los medicamentos guardados en la tabla
-            medicamentos.forEach((medicamento) => {
-                const fila = crearFilaMedicamento(medicamento);
-                tablaMedicamentos.appendChild(fila);
-            });
-
-            // Agregar un nuevo medicamento al formulario
-            formularioMedicamento.addEventListener("submit", function (event) {
-                event.preventDefault();
-
-                const nombreMedicamento = document.getElementById("nombreMedicamento").value;
-                const cantidadMedicamento = document.getElementById("cantidadMedicamento").value;
-                const horaMedicamento = document.getElementById("horaMedicamento").value;
-
-                // Validar que los campos no estén vacíos
-                if (nombreMedicamento && cantidadMedicamento && horaMedicamento) {
-                    const nuevoMedicamento = {
-                        nombre: nombreMedicamento,
-                        cantidad: cantidadMedicamento,
-                        hora: horaMedicamento
-                    };
-
-                    // Agregar el nuevo medicamento al arreglo y a la tabla
-                    medicamentos.push(nuevoMedicamento);
-                    const fila = crearFilaMedicamento(nuevoMedicamento);
-                    tablaMedicamentos.appendChild(fila);
-
-                    // Limpiar los campos del formulario
-                    document.getElementById("nombreMedicamento").value = "";
-                    document.getElementById("cantidadMedicamento").value = "";
-                    document.getElementById("horaMedicamento").value = "";
-
-                    // Ocultar el formulario después de agregar el medicamento
-                    toggleForm();
-
-                    // Guardar los medicamentos en localStorage
-                    localStorage.setItem("medicamentos", JSON.stringify(medicamentos));
-                }
-            });
-
-            // Agrega aquí la lógica para reiniciar las casillas cada 24 horas
-            // y el mensaje en el footer
-        });
+        // Función para eliminar una fila al hacer clic en el ícono de papelera
+        function eliminarFila(row) {
+            const table = document.getElementById("medicamentos");
+            const rowIndex = row.rowIndex;
+            table.deleteRow(rowIndex);
+        }
     </script>
 </body>
 </html>
